Fix background alignment

--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ header {
 		display: block;
 		width: 130px; height: 100px;
 		margin-top: -20px;
-		background: url('logo.png') center center no-repeat;
+		background: url('logo.png') top left no-repeat;
 		@media screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi) {
 			background-image: url('logo@2x.png'); background-size: 130px 100px;
 		}
